src/css/feriados.css
@keyframes swing {
  20% {
    transform: rotate3d(0, 0, 1, 15deg);
  }
  40% {
    transform: rotate3d(0, 0, 1, -10deg);
  }
  60% {
    transform: rotate3d(0, 0, 1, 5deg);
  }
  80% {
    transform: rotate3d(0, 0, 1, -5deg);
  }
  to {
    transform: rotate3d(0, 0, 1, 0deg);
  }
}

/**
 * light & dark mode enable
 */
 :root {
  color-scheme: light dark;
  --txt-color: #343434;
  --bg-color: #fdfdfd;
  --bg-box-color: #f7f7f7;
  --border-color: #d6d6d6;
  --bg-highlight-color: #bc0506;
  --bg-box-highlight-color: rgba(188, 5, 6, 0.12);
}

@media (prefers-color-scheme: dark) {
  :root {
    --txt-color: #fff;
    --bg-color: #121212;
    --bg-box-color: #1c1c1c;
    --border-color: #4b5454;
    --bg-highlight-color: #03dac5;
    --bg-box-highlight-color: rgba(3, 218, 197, 0.12);
  }
}

[data-bright-env="light-mode"] {
  --txt-color: #343434 !important;
  --bg-color: #fdfdfd !important;
  --bg-box-color: #f7f7f7 !important;
  --border-color: #d6d6d6 !important;
  --bg-highlight-color: #bc0506 !important;
  --bg-box-highlight-color: rgba(188, 5, 6, 0.12) !important;
}

[data-bright-env="dark-mode"] {
  --txt-color: #fff !important;
  --bg-color: #121212 !important;
  --bg-box-color: #1c1c1c;
  --border-color: #4b5454 !important;
  --bg-highlight-color: #03dac5 !important;
  --bg-box-highlight-color: rgba(3, 218, 197, 0.12) !important;
}


/**
 * Slideout
 */
.slideout-menu {
  position: fixed;
  top: 0;
  bottom: 0;
  z-index: 0;
  width: 65px;
  height: 100%;
  min-height: 100vh;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  display: block;

  right: 0;
  background-color: var(--bg-box-color);
}

.slideout-move.slideout-menu {
  z-index: 3;
  will-change: transform;
}

.slideout-move.slideout-panel {
  position: relative;
  z-index: 1;
  will-change: transform;
}

.slideout-move.slideout-menu-left {
  left: -256px;
}

.slideout-move.slideout-menu-right {
  right: -256px;
}

.slideout-panel {
  min-height: 100vh;
  background-color: var(--bg-color);
}

.slideout-dimmer {
  visibility: hidden;
  opacity: 0;
  z-index: -1;
  pointer-events: none;
  background-color: rgba(0,0,0,.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.slideout-open,
.slideout-open body,
.slideout-open .slideout-panel {
  overflow: hidden;
}

.slideout-open .slideout-menu {
  display: block;
}

.slideout-open .slideout-dimmer {
  visibility: visible;
  opacity: 1;
  z-index: 2;
}

/**
 * Global
 */

body {
  color: var(--txt-color);
  background-color: var(--bg-color);
  width: 100%;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

a,
a:visited {
  color: var(--txt-color);
}

main {
  width: 100%;
  min-height: 84vh;
}

header {
  position: sticky;
  top: 0;
  z-index: 1;
  background: var(--bg-color);
  height: 55px;
  line-height: 55px;
}

.logo {
  font-size: 20px;
  font-weight: 400;
  text-align: center;
  line-height: 55px;
  margin: 0;
}

.hamburger {
  position: absolute;
  top: 0;
  right: 0;
  height: 55px;
  width: 55px;
  border: none;
  background: transparent;
  opacity: 0.8;
}

.hamburger:focus,
.menu button:focus {
  outline: none;
}

.menu button {
  position: relative;
  border: none;
  background: transparent;
  height: 55px;
  width: 100%;
  font-size: 25px;
}

.icon {
  position: absolute;
  align-items: center;
  border: none;
  cursor: pointer;
}

.moon {
  border-radius: 50%;
  width: 32px;
  height: 32px;
  box-shadow: -10px 10px 0 0 var(--txt-color);
  transform: scale(0.55);
  top: 5px;
  left: 23px;
}

.sun {
  transform: scale(0.35);
  width: 22px;
  height: 22px;
  border-radius: 50%;
  top: 16px;
  left: 21px;
  background-color: var(--txt-color);
}

.sun:after {
  box-shadow: var(--txt-color) 0px -23px 0px, var(--txt-color) 0px 23px 0px, var(--txt-color) 23px 0px 0px, var(--txt-color) -23px 0px 0px, var(--txt-color) 15px 15px 0px, var(--txt-color) -15px 15px 0px, var(--txt-color) 15px -15px 0px, var(--txt-color) -15px -15px 0px;
  content: '';
  width: 8px;
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  transform: scale(1);
  border-radius: 50%;
  margin: -4px 0px 0px -4px;
  transition: all 0.35s ease 0s;
}

nav {
  height: 70px;
  text-align: center;
  position: sticky;
  bottom: 0vh;
  background: var(--bg-color);
}

.calendar-title {
  display: block;
  text-transform: capitalize;
  text-align: center;
}

.btn {
  touch-action:none;
  user-select: none;
  border: none;
  background: none;
  margin: 10px 0;
  padding: 0 30px;
  width: 48%;
  height: 50px;
  color: var(--txt-color);
  font-size: 30px;
}

.btn:active,
.btn:focus {
  outline: none;
}

.timeline {
  list-style: none;
  border-left: 1px solid var(--border-color);
  width: 76%;
  position: relative;
  left: 18%;
  padding: 20px 10px;
}

.day {
  position: relative;
  margin-bottom: 25px;
}


.day:before {
  content: '';
  display: block;
  width: 9px;
  height: 9px;
  position: absolute;
  top: 5px;
  left: -15px;
  border-radius: 100%;
  background: var(--bg-highlight-color);
}

.day time {
  position: absolute;
  left: -74px;
  width: 55px;
  text-align: center;
  font-size: 15px;
  font-weight: 400;
}

.day time strong {
  display: block;
  font-size: 25px;
}

.day p {
  text-align: left;
  min-height: 60px;
  box-sizing: border-box;
  padding: 10px;
  margin: 0 10px;
  font-weight: 400;
  color: var(--txt-color);
  background-color: var(--bg-box-color);
}

.next {
  color: var(--bg-highlight-color);
}

.next p,
.month.current {
  background-color: var(--bg-box-highlight-color);
  box-shadow: 0px 0px 0px 1px var(--bg-highlight-color);
}

.nodata {
  text-align: center;
  margin: 70px 0;
}

.swing {
  transform-origin: top center;
  animation: swing 2s infinite;
}

.loading {
  position: absolute;
  top: 150px;
  left: 50%;
  display: block;
  width: 70px;
}

.share-buttons {
  margin: 0 0 10px;
  font-size: .9em;
  border-top: 1px solid var(--border-color);
  padding-top: 5px;
}

.share-buttons p {
  text-align: center;
  margin: 0;
  position: absolute;
  bottom: 10px;
}

.heart {
  font-style: normal;
  font-weight: 500;
  color: #C0392B;
  text-decoration: none;
}

.year {
  list-style: none;
  margin: 0 8px 12px;
  overflow: hidden;
  background-color: var(--bg-color);
  height: 100vh;
}

.month {
  background-color: var(--bg-box-color);
  padding: 10px;
  margin: 8px 2%;
  width: 46%;
  height: 85px;
  border-radius: 4px;
  box-sizing: border-box;
  float: left;
  text-transform: capitalize;
}

.month * {
  pointer-events: none;
}

.month time {
  font-size: 24px;
  font-weight: 400;
  display: block;
  margin-bottom: 10px;
}

.month span {
  display: inline-block;
  width: 8px;
  height: 8px;
  background: var(--bg-highlight-color);
  border-radius: 100%;
  margin: 3px;
}


/* Large Screens */
@media all and (min-width: 54em) {
  body {
    max-width: 50%;
    margin: 0 auto;
  }

  .hamburger {
    display: none;
  }

  nav {
    position: absolute;
    top: -8px;
    right: 0px;
    z-index: 1;
  }
}

main {
  position: relative;
  overflow: hidden;
}

.year[data-hidden] {
  transform: translateY(200vh) !important
}

[data-view="year"] {
  overflow: hidden;
}

.year{
  position: absolute;
  top: 0;
  transition: transform 300ms cubic-bezier(0.4, 0, 1, 1);
  transform: translateY(0);
  background-color: var(--bg-color);
}

